--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
     <plugins>
       <plugin>
         <!-- Build an executable JAR -->
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
+        <groupId>org.apache./var/jenkins_home/tools/hudson.tasks.Maven_MavenInstallation/maven_361/bin/mvn.plugins</groupId>
+        <artifactId>/var/jenkins_home/tools/hudson.tasks.Maven_MavenInstallation/maven_361/bin/mvn-jar-plugin</artifactId>
         <version>3.0.2</version>
         <configuration>
           <archive>
