--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
-<project xmlns="http:///var/jenkins_home/tools/hudson.tasks.Maven_MavenInstallation/maven_361/bin/mvn.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http:///var/jenkins_home/tools/hudson.tasks.Maven_MavenInstallation/maven_361/bin/mvn.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>my-app</name>
-  <url>http:///var/jenkins_home/tools/hudson.tasks.Maven_MavenInstallation/maven_361/bin/mvn.apache.org</url>
+  <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -19,8 +19,8 @@
     <plugins>
       <plugin>
         <!-- Build an executable JAR -->
-        <groupId>org.apache./var/jenkins_home/tools/hudson.tasks.Maven_MavenInstallation/maven_361/bin/mvn.plugins</groupId>
-        <artifactId>/var/jenkins_home/tools/hudson.tasks.Maven_MavenInstallation/maven_361/bin/mvn-jar-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
         <version>3.0.2</version>
         <configuration>
           <archive>
